[package]
name = "timer_task"
version = "0.1.0"
authors = ["jiangfb <jayphbee@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
bitmaps = "2.1.0"
typenum = "1.13.0"